--- a/synthese-frontend/angular.json
+++ b/synthese-frontend/angular.json
@@ -25,9 +25,15 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/bootstrap/scss/bootstrap.scss",
+              "./node_modules/primeng/resources/themes/bootstrap4-dark-blue/theme.css",
+              "./node_modules/primeng/resources/primeng.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "./node_modules/jquery/dist/jquery.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -87,9 +93,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+
+              "./src/styles.css"
+
             ],
-            "scripts": []
+            "scripts": [
+
+            ]
           }
         }
       }
