--- a/synthese-frontend/angular.json
+++ b/synthese-frontend/angular.json
@@ -25,9 +25,10 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/bootstrap/scss/bootstrap.scss",
-              "./node_modules/primeng/resources/themes/bootstrap4-dark-blue/theme.css",
-              "./node_modules/primeng/resources/primeng.min.css",
+              "node_modules/bootstrap/scss/bootstrap.scss",
+              "node_modules/primeng/resources/themes/bootstrap4-dark-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css",
               "src/styles.css"
             ],
             "scripts": [
